<resources>
	<string name="app_name">SampleEPassport</string>
	<string name="bac_failed">Failed to read document, BAC error.</string>
	<string name="bio_init">Biometrics initialized.</string>
	<string name="bio_ini_fail">Biometrics FAILED to initialize.</string>
	<string name="card_closed">Card reader closed.</string>
	<string name="card_close_fail">Failed to close card reader.</string>
	<string name="card_open_fail">Failed to open card reader.</string>
	<string name="card_opened">Card reader is open.</string>
	<string name="cardreader_opening">Opening card reader…</string>
	<string name="close_card">Close Card Reader</string>
	<string name="close_epassport">Close EPassport</string>
	<string name="close_mrz">Close MRZ</string>
	<string name="date_of_birth">Date Of Birth</string>
    <string name="date_of_exp">Date Of Expiry</string>
    <string name="doc_number">Document Number</string>
	<string name="doc_can">Document CAN</string>
	<string name="icao_done">Finished reading document.</string>
	<string name="open_cardreader">Open Card Reader</string>
	<string name="open_epassport">Open EPassport</string>
	<string name="open_mrz">Open MRZ</string>
	<string name="epassport_opening">Opening EPassport reader…</string>
	<string name="epassport_open_failed">Failed to open EPassport reader.</string>
	<string name="epassport_opened">EPassport reader is open.</string>
	<string name="epassport_closed">EPassport Reader is closed.</string>
	<string name="mrz_opening">Opening MRZ sensor…</string>
	<string name="mrz_open_failed">Failed to open MRZ sensor.</string>
	<string name="mrz_opened">MRZ sensor is open.</string>
	<string name="mrz_closed">MRZ sensor is closed.</string>
	<string name="mrz_failed_close">MRZ sensor failed to close.</string>
	<string name="mrz_failed_reswipe">Failed to read MRZ, please re-swipe document.</string>
	<string name="mrz_reading_wait">Reading MRZ, please wait…</string>
	<string name="mrz_read_success">MRZ successfully read.</string>
	<string name="read_ghananid_button_label">Read GhanaNId</string>
	<string name="read_icao_button_label">Read ICAO</string>
    <string name="generate_request">Generate certificate Request</string>
	<string name="reading">Reading…</string>
	<string name="not_supported">Not Supported!</string>
</resources>
